--- a/src/components/fanshop-section/fanshop-section.twig
+++ b/src/components/fanshop-section/fanshop-section.twig
@@ -1,50 +1,45 @@
 <section class="c-fanshop-section">
-   <div class="container">
-         <div class="d-flex flex-wrap">
-            <div class="col-xl-3 col-sm-6 col-12">
-               <a href="#" class="c-fanshop-section-link">
-                  <div class="c-fanshop-section-link__logo">
-                     <img src="images/ico/logo.svg" loading="lazy" alt="">
-                  </div>
-                  <h2 class="h2">
-                     Oficiální
-                     e-shop
-                  </h2>
-                  <div class="c-fanshop-section__btn c-fanshop-section__btn--blue">
-                    {% include "@images/cart.svg" %} Navštívit
-                  </div>
-               </a>
-            </div>
-            <div class="col-xl-3 col-sm-6 col-12">
-               <a href="#" class="product">
-                  <div class="product__img">
-                     <img src="images/content/svetr.png" loading="lazy" alt="">
-                  </div>
-                    <div class="c-fanshop-section__btn ">
-                    {% include "@images/cart.svg" %} 899 Kč
-                  </div>
-               </a>
-            </div>
-             <div class="col-xl-3 col-sm-6 col-12">
-               <a href="#" class="product">
-                  <div class="product__img">
-                     <img src="images/content/svetr.png" loading="lazy" alt="">
-                  </div>
-                    <div class="c-fanshop-section__btn ">
-                    {% include "@images/cart.svg" %} 899 Kč
-                  </div>
-               </a>
-            </div>
-             <div class="col-xl-3 col-sm-6 col-12">
-               <a href="#" class="product">
-                  <div class="product__img">
-                     <img src="images/content/svetr.png" loading="lazy" alt="">
-                  </div>
-                    <div class="c-fanshop-section__btn ">
-                    {% include "@images/cart.svg" %} 899 Kč
-                  </div>
-               </a>
-            </div>
+  <div class="container">
+    <div class="d-flex flex-wrap">
+      <div class="col-xl-3 col-sm-6 col-12">
+        <a href="#" class="c-fanshop-section-link">
+          <div class="c-fanshop-section-link__logo">
+            <img src="images/ico/logo.svg" loading="lazy" alt="" />
+          </div>
+          <h2 class="h2">Oficiální e-shop</h2>
+          <div class="c-fanshop-section__btn c-fanshop-section__btn--blue">
+            {% include "@images/cart.svg" %} Navštívit
+          </div>
+        </a>
       </div>
-   </div>
+      <div class="col-xl-3 col-sm-6 col-12">
+        <a href="#" class="product">
+          <div class="product__img"></div>
+          <div class="c-fanshop-section__btn">
+            {% include "@images/cart.svg" %} 899 Kč
+          </div>
+        </a>
+      </div>
+      <div class="col-xl-3 col-sm-6 col-12">
+        <a href="#" class="product">
+          <div class="product__img">
+            <img src="images/content/svetr.png" loading="lazy" alt="" />
+          </div>
+          <div class="c-fanshop-section__btn">
+            {% include "@images/cart.svg" %} 899 Kč
+          </div>
+        </a>
+      </div>
+      <div class="col-xl-3 col-sm-6 col-12">
+        <a href="#" class="product">
+          <div class="product__img">
+            <img src="images/content/svetr.png" loading="lazy" alt="" />
+          </div>
+          <div class="c-fanshop-section__btn">
+            {% include "@images/cart.svg" %} 899 Kč
+          </div>
+        </a>
+      </div>
+    </div>
+  </div>
 </section>
