--- a/src/layouts/10.0_partneri.twig
+++ b/src/layouts/10.0_partneri.twig
@@ -1,18 +1,15 @@
-{% extends "@components/base/base.twig" %}
-
-   {% set title = "04.0_Partneři" %}
-
-   {% block main %}
-      <section class="partners-section pt-5 pt-md-10 text-center"> 
-         <div class="container"> 
-            <h1 class="h1">Generální partner</h1>
-            <ul class="row g-5 g-md-10">
-               <li class="col-lg-4 col-sm-6 col-12">
-                  <a target="_blank" href="#">
-                     <img src="images/content/1.png" loading="lazy" alt="" />
-                  </a>
-               </li>
-                <li class="col-lg-4 col-sm-6 col-12">
+{% extends "@components/base/base.twig" %} {% set title = "04.0_Partneři" %} {%
+block main %}
+<section class="partners-section pt-5 pt-md-10 text-center">
+  <div class="container">
+    <h1 class="h1">Generální partner</h1>
+    <ul class="row g-5 g-md-10 justify-content-center">
+      <li class="col-lg-4 col-sm-6 col-12">
+        <a target="_blank" href="#">
+          <img src="images/content/1.png" loading="lazy" alt="" />
+        </a>
+      </li>
+      <!-- <li class="col-lg-4 col-sm-6 col-12">
                   <a target="_blank" href="#">
                      <img src="images/content/2.png" loading="lazy" alt="" />
                   </a>
@@ -21,127 +18,123 @@
                   <a target="_blank" href="#">
                      <img src="images/content/3.png" loading="lazy" alt="" />
                   </a>
-               </li>
-            </ul>
-            <h2 class="h2">
-               Hlavní partneři
-            </h2>
-            <ul class="row g-5 g-md-10">
-               <li class="col-lg-4 col-sm-6 col-12">
-                  <a target="_blank" href="#">
-                     <img src="images/content/1.png" loading="lazy" alt="" />
-                  </a>
-               </li>
-                <li class="col-lg-4 col-sm-6 col-12">
-                  <a target="_blank" href="#">
-                     <img src="images/content/2.png" loading="lazy" alt="" />
-                  </a>
-               </li>
-                <li class="col-lg-4 col-sm-6 col-12">
-                  <a target="_blank" href="#">
-                     <img src="images/content/3.png" loading="lazy" alt="" />
-                  </a>
-               </li>
-            </ul>
-            <h3 class="h2">
-               partneři
-            </h3>
-             <ul class="row g-5 g-md-10">
-               <li class="col-lg-3  col-sm-4 col-12">
-                  <a target="_blank" href="#">
-                     <img src="images/content/1.png" loading="lazy" alt="" />
-                  </a>
-               </li>
-                <li class="col-lg-3  col-sm-4 col-12">
-                  <a target="_blank" href="#">
-                     <img src="images/content/1.png" loading="lazy" alt="" />
-                  </a>
-               </li>
-                <li class="col-lg-3  col-sm-4 col-12">
-                  <a target="_blank" href="#">
-                     <img src="images/content/1.png" loading="lazy" alt="" />
-                  </a>
-               </li>
-                <li class="col-lg-3  col-sm-4 col-12">
-                  <a target="_blank" href="#">
-                     <img src="images/content/1.png" loading="lazy" alt="" />
-                  </a>
-               </li>
-                <li class="col-lg-3  col-sm-4 col-12">
-                  <a target="_blank" href="#">
-                     <img src="images/content/1.png" loading="lazy" alt="" />
-                  </a>
-               </li>
-                <li class="col-lg-3 col-sm-4 col-12">
-                  <a target="_blank" href="#">
-                     <img src="images/content/1.png" loading="lazy" alt="" />
-                  </a>
-               </li>
-                <li class="col-lg-3  col-sm-4 col-12">
-                  <a target="_blank" href="#">
-                     <img src="images/content/2.png" loading="lazy" alt="" />
-                  </a>
-               </li>
-                <li class="col-lg-3  col-sm-4 col-12">
-                  <a target="_blank" href="#">
-                     <img src="images/content/3.png" loading="lazy" alt="" />
-                  </a>
-               </li>
-            </ul>
-            <h4 class="h2">Partneři mládeže</h4>
-            <ul class="row g-5 g-md-10">
-               <li class="col-lg-3  col-sm-4 col-12">
-                  <a target="_blank" href="#">
-                     <img src="images/content/3.png" loading="lazy" alt="" />
-                  </a>
-               </li>
-                <li class="col-lg-3  col-sm-4 col-12">
-                  <a target="_blank" href="#">
-                     <img src="images/content/3.png" loading="lazy" alt="" />
-                  </a>
-               </li>
-                <li class="col-lg-3  col-sm-4 col-12">
-                  <a target="_blank" href="#">
-                     <img src="images/content/3.png" loading="lazy" alt="" />
-                  </a>
-               </li>
-            </ul>
-            <h5 class="h2">Mediální partneři</h5>
-            <ul class="row g-5 g-md-10">
-               <li class="col-lg-3  col-sm-4 col-12">
-                  <a target="_blank" href="#">
-                     <img src="images/content/3.png" loading="lazy" alt="" />
-                  </a>
-               </li>
-                <li class="col-lg-3  col-sm-4 col-12">
-                  <a target="_blank" href="#">
-                     <img src="images/content/3.png" loading="lazy" alt="" />
-                  </a>
-               </li>
-                <li class="col-lg-3  col-sm-4 col-12">
-                  <a target="_blank" href="#">
-                     <img src="images/content/3.png" loading="lazy" alt="" />
-                  </a>
-               </li>
-            </ul>
-            <h6 class="h2">spolupracujeme</h6>
-            <ul class="row g-5 g-md-10">
-               <li class="col-lg-4 col-sm-6 col-12">
-                  <a target="_blank" href="#">
-                     <img src="images/content/1.png" loading="lazy" alt="" />
-                  </a>
-               </li>
-                <li class="col-lg-4 col-sm-6 col-12">
-                  <a target="_blank" href="#">
-                     <img src="images/content/2.png" loading="lazy" alt="" />
-                  </a>
-               </li>
-                <li class="col-lg-4 col-sm-6 col-12">
-                  <a target="_blank" href="#">
-                     <img src="images/content/3.png" loading="lazy" alt="" />
-                  </a>
-               </li>
-            </ul>
-         </div>
-      </section>
-   {% endblock %}
+               </li> -->
+    </ul>
+    <h2 class="h2">Hlavní partneři</h2>
+    <ul class="row g-5 g-md-10 justify-content-center">
+      <li class="col-lg-4 col-sm-6 col-12">
+        <a target="_blank" href="#">
+          <img src="images/content/1.png" loading="lazy" alt="" />
+        </a>
+      </li>
+      <li class="col-lg-4 col-sm-6 col-12">
+        <a target="_blank" href="#">
+          <img src="images/content/2.png" loading="lazy" alt="" />
+        </a>
+      </li>
+      <!-- <li class="col-lg-4 col-sm-6 col-12">
+        <a target="_blank" href="#">
+          <img src="images/content/3.png" loading="lazy" alt="" />
+        </a>
+      </li> -->
+    </ul>
+    <h3 class="h2">partneři</h3>
+    <ul class="row g-5 g-md-10 justify-content-center">
+      <li class="col-lg-3 col-sm-4 col-12">
+        <a target="_blank" href="#">
+          <img src="images/content/1.png" loading="lazy" alt="" />
+        </a>
+      </li>
+      <li class="col-lg-3 col-sm-4 col-12">
+        <a target="_blank" href="#">
+          <img src="images/content/1.png" loading="lazy" alt="" />
+        </a>
+      </li>
+      <!-- <li class="col-lg-3 col-sm-4 col-12">
+        <a target="_blank" href="#">
+          <img src="images/content/1.png" loading="lazy" alt="" />
+        </a>
+      </li> -->
+      <li class="col-lg-3 col-sm-4 col-12">
+        <a target="_blank" href="#">
+          <img src="images/content/1.png" loading="lazy" alt="" />
+        </a>
+      </li>
+      <li class="col-lg-3 col-sm-4 col-12">
+        <a target="_blank" href="#">
+          <img src="images/content/1.png" loading="lazy" alt="" />
+        </a>
+      </li>
+      <li class="col-lg-3 col-sm-4 col-12">
+        <a target="_blank" href="#">
+          <img src="images/content/1.png" loading="lazy" alt="" />
+        </a>
+      </li>
+      <li class="col-lg-3 col-sm-4 col-12">
+        <a target="_blank" href="#">
+          <img src="images/content/2.png" loading="lazy" alt="" />
+        </a>
+      </li>
+      <li class="col-lg-3 col-sm-4 col-12">
+        <a target="_blank" href="#">
+          <img src="images/content/3.png" loading="lazy" alt="" />
+        </a>
+      </li>
+    </ul>
+    <h4 class="h2">Partneři mládeže</h4>
+    <ul class="row g-5 g-md-10 justify-content-center">
+      <li class="col-lg-3 col-sm-4 col-12">
+        <a target="_blank" href="#">
+          <img src="images/content/3.png" loading="lazy" alt="" />
+        </a>
+      </li>
+      <li class="col-lg-3 col-sm-4 col-12">
+        <a target="_blank" href="#">
+          <img src="images/content/3.png" loading="lazy" alt="" />
+        </a>
+      </li>
+      <li class="col-lg-3 col-sm-4 col-12">
+        <a target="_blank" href="#">
+          <img src="images/content/3.png" loading="lazy" alt="" />
+        </a>
+      </li>
+    </ul>
+    <h5 class="h2">Mediální partneři</h5>
+    <ul class="row g-5 g-md-10 justify-content-center">
+      <li class="col-lg-3 col-sm-4 col-12">
+        <a target="_blank" href="#">
+          <img src="images/content/3.png" loading="lazy" alt="" />
+        </a>
+      </li>
+      <li class="col-lg-3 col-sm-4 col-12">
+        <a target="_blank" href="#">
+          <img src="images/content/3.png" loading="lazy" alt="" />
+        </a>
+      </li>
+      <li class="col-lg-3 col-sm-4 col-12">
+        <a target="_blank" href="#">
+          <img src="images/content/3.png" loading="lazy" alt="" />
+        </a>
+      </li>
+    </ul>
+    <h6 class="h2">spolupracujeme</h6>
+    <ul class="row g-5 g-md-10 justify-content-center">
+      <li class="col-lg-4 col-sm-6 col-12">
+        <a target="_blank" href="#">
+          <img src="images/content/1.png" loading="lazy" alt="" />
+        </a>
+      </li>
+      <li class="col-lg-4 col-sm-6 col-12">
+        <a target="_blank" href="#">
+          <img src="images/content/2.png" loading="lazy" alt="" />
+        </a>
+      </li>
+      <li class="col-lg-4 col-sm-6 col-12">
+        <a target="_blank" href="#">
+          <img src="images/content/3.png" loading="lazy" alt="" />
+        </a>
+      </li>
+    </ul>
+  </div>
+</section>
+{% endblock %}
