--- a/src/components/team-section/team-section.scss
+++ b/src/components/team-section/team-section.scss
@@ -3,13 +3,13 @@
     object-position: 0 24px;
   }
   .c-team-section__item:hover {
-    .c-team-section__img{
+    .c-team-section__img {
       transform: scale(1.1);
     }
-    .c-team-section__hover{
+    .c-team-section__hover {
       display: none;
     }
-    .c-team-section__info{
+    .c-team-section__info {
       transform: translateY(0rem);
     }
   }
@@ -61,6 +61,9 @@
     margin-bottom: 16px;
     transition: transform 0.3s ease-out;
     transform: translateX(0);
+    @include media-breakpoint-down(lg) {
+      bottom: 40px;
+    }
     p {
       max-width: 73px;
       text-align: right;
@@ -102,7 +105,7 @@
         opacity: 1;
       }
       .c-team-section__info {
-        transform: translateX(-2rem);
+        transform: translateX(0);
       }
     }
     @include media-breakpoint-down(sm) {
@@ -140,7 +143,7 @@
     width: 100%;
     position: relative;
     z-index: 12;
-    transition: all .3s;
+    transition: all 0.3s;
     img {
       width: 100%;
       height: 100%;
