--- a/src/components/article-section/article-section.twig
+++ b/src/components/article-section/article-section.twig
@@ -1,131 +1,217 @@
 <article class="c-article-section col-xl-8">
-   <div class="c-article-section__top">
-      <figure class="c-article-section__img">
-         <img src="images/content/2.jpg" loading="lazy" alt="">
-      </figure>
-      <div class="c-article-section__top-info">
-         <h1 class="h1 mb-6">
-            West po porážce s Brnem: Měli jsme rozhodnout v první půli
-         </h1>
-         <div class="align-items-center d-flex justify-content-center">
-            <div class="px-4">
-               <div class="date date--blue">16. 12. 2021</div>
-            </div>
-            <div class="px-4">
-               <div class="h6">Jan Šimek</div>
-            </div>
-         </div>
+  <div class="c-article-section__top">
+    <figure class="c-article-section__img">
+      <img src="images/content/2.jpg" loading="lazy" alt="" />
+    </figure>
+    <div class="c-article-section__top-info">
+      <h1 class="h1 mb-6">
+        West po porážce s Brnem: Měli jsme rozhodnout v první půli
+      </h1>
+      <div class="align-items-center d-flex justify-content-center">
+        <div class="px-4">
+          <div class="date date--blue">16. 12. 2021</div>
+        </div>
+        <div class="px-4">
+          <div class="h6">Jan Šimek</div>
+        </div>
       </div>
-   </div>
-   <div class="o-wrapper">
-      <div class="o-content">
-         <p class="perex">
-            <strong>
-               Opava – Druhou zimní posilou Slezského FC se stal obránce Miloš Kopečný, jenž s klubem podepsal smlouvu do 30. června 2024.
-            </strong>
-         </p>
-         <p>
-         „Miloš je v ideálním fotbalovém věku. Jde o pracovitého, velmi odolného a neústupného hráče. Chtěli jsme ho už v létě, ale měl určité zdravotní potíže, které nicméně vyřešil, a tak jsme se k jednáním nyní vrátili. Věřím, že si pro sebe vybojuje pevnou pozici na pravé straně obrany a bude patřit k naším stěžejním hráčům,“ uvádí sportovní manažer SFC Jaroslav Kolínek.
-         </p>
-         <p>
-            „Náš první kontakt proběhl už v létě. Byl jsem po operaci. V Táborsku mi ještě dojížděla smlouva z Českých Budějovic. O zájmu Opavy jsem tedy věděl a zároveň jsem se chtěl přiblížit domovu, takže jsem se domluvili na spolupráci,“ říká Miloš Kopečný, jenž bydlí ve Zlíně.
-         </p>
-         <q>
-            <h3>
-               Opavu mám zafixovanou jako klub s krásným stadionem a super fanoušky. Byla tu vždy dobrá atmosféra!
-            </h3>
-         </q>
-         <p>
-            „Opavu mám zafixovanou jako klub s krásným stadionem a super fanoušky. Rád jsem tady hrával jako soupeř, protože tady byla vždycky dobrá atmosféra. Navíc jsem se bavil s Pepou Hnaníčkem a Lukášem Holíkem. Oba si působení v Opavě pochvalují, takže se moc těším,“ dodává Kopečný.
-         </p>
-         <p>
-            Sedmadvacetiletý fotbalista má na svém kontě 50 prvoligových startů v dresu Zlína a Českých Budějovic. Druhou nejvyšší soutěž si zahrál za Sokolov, Hradec Králové a naposledy za Táborsko, kde na podzim naskočil do deseti utkání a vstřelil jeden gól. Sezonu si střihl také v nejvyšší slovenské soutěži, kde nastupoval za Senici. Nově bude působit ve Slezském FC.
-         </p>
-         <table>
-            <thead>
-               <tr>
-                  <th>První sloupec</th>
-                  <th>Druhý sloupec</th>
-                  <th>Třetí a poslední sloupec</th>
-               </tr>
-            </thead>
-            <tbody>
-                  <tr>
-                     <td>Obsah prvního sloupce</td>
-                     <td>Další obsah sloupce</td>
-                     <td>Obsah třetího a posledního sloupce, který je tentokrát o něco delší.</td>
-                  </tr>
-                  <tr>
-                     <td>Obsah prvního sloupce</td>
-                     <td>Další obsah sloupce</td>
-                     <td>Obsah třetího a posledního sloupce, který je tentokrát o něco delší.</td>
-                  </tr>
-                  <tr>
-                     <td>Obsah prvního sloupce</td>
-                     <td>Další obsah sloupce</td>
-                     <td>Obsah třetího a posledního sloupce, který je tentokrát o něco delší.</td>
-                  </tr>
-            </tbody>
-         </table>
-         <p>
-            „Opavu mám zafixovanou jako klub s krásným stadionem a super fanoušky. Rád jsem tady hrával jako soupeř, protože tady byla vždycky dobrá atmosféra. Navíc jsem se bavil s Pepou Hnaníčkem a Lukášem Holíkem. Oba si působení v Opavě pochvalují, takže se moc těším,“ dodává Kopečný.
-         </p>
-         <p>
-            Sedmadvacetiletý fotbalista má na svém kontě 50 prvoligových startů v dresu Zlína a Českých Budějovic. Druhou nejvyšší soutěž si zahrál za Sokolov, Hradec Králové a naposledy za Táborsko, kde na podzim naskočil do deseti utkání a vstřelil jeden gól. Sezonu si střihl také v nejvyšší slovenské soutěži, kde nastupoval za Senici. Nově bude působit ve Slezském FC.
-         </p>
-         <p>
-            Vítej Miloši!
-         </p>
-         <hr>
-         <h3>
-            Související fotogalerie
-         </h3>
-         <div class="row js-gallery gx-2 c-article-section__fotogalerie" >
-            <div class="col-md-3 col-6">
-               <figure>
-                  <a class="c-article-section__fotogalerie-foto" data-gallery="1" data-gallery-id="1"  href="#">
-                     <img src="https://via.placeholder.com/188x118" loading="lazy" alt="" />
-                  </a>
-               </figure>
-            </div>
-            <div class="col-md-3 col-6">
-               <figure>
-                  <a class="c-article-section__fotogalerie-foto" data-gallery="1" data-gallery-id="1"  href="#">
-                     <img src="https://via.placeholder.com/188x118" loading="lazy" alt="" />
-                  </a>
-               </figure>
-            </div>
-            <div class="col-md-3 col-6">
-               <figure>
-                  <a class="c-article-section__fotogalerie-foto" data-gallery="1" data-gallery-id="1"  href="#">
-                     <img src="https://via.placeholder.com/188x118" loading="lazy" alt="" />
-                  </a>
-               </figure>
-            </div>
-            <div class="col-md-3 col-6">
-               <figure>
-                  <a class="c-article-section__fotogalerie-foto c-article-section__fotogalerie-link" data-gallery="1" data-gallery-id="1"  href="#">
-                     <img src="https://via.placeholder.com/188x118" loading="lazy" alt="" />
-                     <span class="c-article-section__fotogalerie-hover">+21</span>
-                  </a>
-               </figure>
-            </div>
-         </div>
+    </div>
+  </div>
+  <div class="o-wrapper">
+    <div class="o-content">
+      <p class="perex">
+        <strong>
+          Opava – Druhou zimní posilou Slezského FC se stal obránce Miloš
+          Kopečný, jenž s klubem podepsal smlouvu do 30. června 2024.
+        </strong>
+      </p>
+      <p>
+        „Miloš je v ideálním fotbalovém věku. Jde o pracovitého, velmi odolného
+        a neústupného hráče. Chtěli jsme ho už v létě, ale měl určité zdravotní
+        potíže, které nicméně vyřešil, a tak jsme se k jednáním nyní vrátili.
+        Věřím, že si pro sebe vybojuje pevnou pozici na pravé straně obrany a
+        bude patřit k naším stěžejním hráčům,“ uvádí sportovní manažer SFC
+        Jaroslav Kolínek.
+      </p>
+      <p>
+        „Náš první kontakt proběhl už v létě. Byl jsem po operaci. V Táborsku mi
+        ještě dojížděla smlouva z Českých Budějovic. O zájmu Opavy jsem tedy
+        věděl a zároveň jsem se chtěl přiblížit domovu, takže jsem se domluvili
+        na spolupráci,“ říká Miloš Kopečný, jenž bydlí ve Zlíně.
+      </p>
+      <q>
+        <h3>
+          Opavu mám zafixovanou jako klub s krásným stadionem a super fanoušky.
+          Byla tu vždy dobrá atmosféra!
+        </h3>
+      </q>
+      <p>
+        „Opavu mám zafixovanou jako klub s krásným stadionem a super fanoušky.
+        Rád jsem tady hrával jako soupeř, protože tady byla vždycky dobrá
+        atmosféra. Navíc jsem se bavil s Pepou Hnaníčkem a Lukášem Holíkem. Oba
+        si působení v Opavě pochvalují, takže se moc těším,“ dodává Kopečný.
+      </p>
+      <iframe
+        width="560"
+        height="315"
+        data-cookiecategory="social"
+        data-placeholder
+        src="https://www.youtube.com/embed/sMmNXtqGRq8"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen=""
+      ></iframe>
+
+      <hr />
+      <p>
+        Sedmadvacetiletý fotbalista má na svém kontě 50 prvoligových startů v
+        dresu Zlína a Českých Budějovic. Druhou nejvyšší soutěž si zahrál za
+        Sokolov, Hradec Králové a naposledy za Táborsko, kde na podzim naskočil
+        do deseti utkání a vstřelil jeden gól. Sezonu si střihl také v nejvyšší
+        slovenské soutěži, kde nastupoval za Senici. Nově bude působit ve
+        Slezském FC.
+      </p>
+      <table>
+        <thead>
+          <tr>
+            <th>První sloupec</th>
+            <th>Druhý sloupec</th>
+            <th>Třetí a poslední sloupec</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Obsah prvního sloupce</td>
+            <td>Další obsah sloupce</td>
+            <td>
+              Obsah třetího a posledního sloupce, který je tentokrát o něco
+              delší.
+            </td>
+          </tr>
+          <tr>
+            <td>Obsah prvního sloupce</td>
+            <td>Další obsah sloupce</td>
+            <td>
+              Obsah třetího a posledního sloupce, který je tentokrát o něco
+              delší.
+            </td>
+          </tr>
+          <tr>
+            <td>Obsah prvního sloupce</td>
+            <td>Další obsah sloupce</td>
+            <td>
+              Obsah třetího a posledního sloupce, který je tentokrát o něco
+              delší.
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <p>
+        „Opavu mám zafixovanou jako klub s krásným stadionem a super fanoušky.
+        Rád jsem tady hrával jako soupeř, protože tady byla vždycky dobrá
+        atmosféra. Navíc jsem se bavil s Pepou Hnaníčkem a Lukášem Holíkem. Oba
+        si působení v Opavě pochvalují, takže se moc těším,“ dodává Kopečný.
+      </p>
+      <p>
+        Sedmadvacetiletý fotbalista má na svém kontě 50 prvoligových startů v
+        dresu Zlína a Českých Budějovic. Druhou nejvyšší soutěž si zahrál za
+        Sokolov, Hradec Králové a naposledy za Táborsko, kde na podzim naskočil
+        do deseti utkání a vstřelil jeden gól. Sezonu si střihl také v nejvyšší
+        slovenské soutěži, kde nastupoval za Senici. Nově bude působit ve
+        Slezském FC.
+      </p>
+      <p>Vítej Miloši!</p>
+      <hr />
+      <h3>Související fotogalerie</h3>
+      <div class="row js-gallery gx-2 c-article-section__fotogalerie">
+        <div class="col-md-3 col-6">
+          <figure>
+            <a
+              class="c-article-section__fotogalerie-foto"
+              data-gallery="1"
+              data-gallery-id="1"
+              href="#"
+            >
+              <img
+                src="https://via.placeholder.com/188x118"
+                loading="lazy"
+                alt=""
+              />
+            </a>
+          </figure>
+        </div>
+        <div class="col-md-3 col-6">
+          <figure>
+            <a
+              class="c-article-section__fotogalerie-foto"
+              data-gallery="1"
+              data-gallery-id="1"
+              href="#"
+            >
+              <img
+                src="https://via.placeholder.com/188x118"
+                loading="lazy"
+                alt=""
+              />
+            </a>
+          </figure>
+        </div>
+        <div class="col-md-3 col-6">
+          <figure>
+            <a
+              class="c-article-section__fotogalerie-foto"
+              data-gallery="1"
+              data-gallery-id="1"
+              href="#"
+            >
+              <img
+                src="https://via.placeholder.com/188x118"
+                loading="lazy"
+                alt=""
+              />
+            </a>
+          </figure>
+        </div>
+        <div class="col-md-3 col-6">
+          <figure>
+            <a
+              class="c-article-section__fotogalerie-foto c-article-section__fotogalerie-link"
+              data-gallery="1"
+              data-gallery-id="1"
+              href="#"
+            >
+              <img
+                src="https://via.placeholder.com/188x118"
+                loading="lazy"
+                alt=""
+              />
+              <span class="c-article-section__fotogalerie-hover">+21</span>
+            </a>
+          </figure>
+        </div>
       </div>
-       <div class="c-article-section__bottom mt-4 ">
-            <span>sdílet</span>
-            <ul class="share-menu">
-               <li>
-                  <a href="https://www.facebook.com/sharer.php?http://localhost:3000/05.0_clanek.html" class="customer share">
-                     {% include "@images/facebook.svg" %}
-                  </a>
-               </li>
-               <li>
-                  <a href="https://twitter.com/share?http://localhost:3000/05.0_clanek.html" class="customer share">
-                     {% include "@images/twitter.svg" %}
-                  </a>
-               </li>
-            </ul>
-      </div>
-   </div>
+    </div>
+    <div class="c-article-section__bottom mt-4">
+      <span>sdílet</span>
+      <ul class="share-menu">
+        <li>
+          <a
+            href="https://www.facebook.com/sharer.php?http://localhost:3000/05.0_clanek.html"
+            class="customer share"
+          >
+            {% include "@images/facebook.svg" %}
+          </a>
+        </li>
+        <li>
+          <a
+            href="https://twitter.com/share?http://localhost:3000/05.0_clanek.html"
+            class="customer share"
+          >
+            {% include "@images/twitter.svg" %}
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
 </article>
