--- a/src/components/base/base.twig
+++ b/src/components/base/base.twig
@@ -76,7 +76,7 @@
     <script defer src="js/scripts.js"></script>
 
     <!-- Modal -->
-    <div class="modal fade" id="ad-modal" tabindex="-1">
+    <!-- <div class="modal fade" id="ad-modal" tabindex="-1">
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
           <div class="modal-body">
@@ -96,6 +96,6 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
