--- a/src/components/article-section/article-section-fonts.twig
+++ b/src/components/article-section/article-section-fonts.twig
@@ -133,11 +133,7 @@
               data-gallery-id="1"
               href="#"
             >
-              <img
-                src="https://via.placeholder.com/188x118"
-                loading="lazy"
-                alt=""
-              />
+              <img src="images/content/2.jpg" loading="lazy" alt="" />
             </a>
           </figure>
         </div>
@@ -149,11 +145,7 @@
               data-gallery-id="1"
               href="#"
             >
-              <img
-                src="https://via.placeholder.com/188x118"
-                loading="lazy"
-                alt=""
-              />
+              <img src="images/content/2.jpg" loading="lazy" alt="" />
             </a>
           </figure>
         </div>
@@ -165,11 +157,7 @@
               data-gallery-id="1"
               href="#"
             >
-              <img
-                src="https://via.placeholder.com/188x118"
-                loading="lazy"
-                alt=""
-              />
+              <img src="images/content/2.jpg" loading="lazy" alt="" />
             </a>
           </figure>
         </div>
@@ -181,11 +169,7 @@
               data-gallery-id="1"
               href="#"
             >
-              <img
-                src="https://via.placeholder.com/188x118"
-                loading="lazy"
-                alt=""
-              />
+              <img src="images/content/2.jpg" loading="lazy" alt="" />
               <span class="c-article-section__fotogalerie-hover">+21</span>
             </a>
           </figure>
