--- a/src/components/photogallery-section/photogallery-section.twig
+++ b/src/components/photogallery-section/photogallery-section.twig
@@ -1,158 +1,138 @@
 <section class="photogallery-section">
-    <div class="menu-section">
-      <div class="container">
-         <div class="menu-section__inner">
-            <h1 class="h1">
-             fotogalerie
-            </h1>
-            <form action="" class="ms-auto w-auto d-flex menu-section__form">
-               <div class="d-flex mb-4 mb-md-0">
-                  <input type="text" placeholder="Zadejte hledaný text">
-                  <button class="btn f-btn">Hledat</button>
-               </div>
-               <label class="o-select menu-section__label">
-                  <select class="js-select">
-                     <option>2021/22</option>
-                     <option value="tipsport">2020/21</option>
-                     <option value="tipsport">2019/20</option>
-                     <option value="tipsport">2018/19</option>
-                     <option value="tipsport">2017/18</option>
-                  </select>
-               </label>
-            </form>
-         </div>
-      </div>   
-   </div>
-   <div class="photogallery-section__inner mb-5 mb-md-10">
-      <div class="container">
-         <div class="row g-5 g-md-10">
-            <div class="col-lg-4 col-sm-6 cl-12">
-               <figure>
-                  <a data-gallery="1" data-gallery-id="1"  href="#">
-                     <img src="https://via.placeholder.com/408x408" loading="lazy" alt="" />
-                     <div class="photogallery-section__info">
-                        <h2 class="h3">
-                           Slezský FC Opava obhájil statuty SCM a SpSM
-                        </h2>
-                        <div class="date date--small date--blue">16. 12. 2021</div>
-                     </div>
-                     <div class="photogallery-section__number"><span>22</span></div>
-                  </a>
-               </figure>
-            </div>
-            <div class="col-lg-4 col-sm-6 cl-12">
-               <figure>
-                  <a data-gallery="1" data-gallery-id="1"  href="#">
-                     <img src="https://via.placeholder.com/408x408" loading="lazy" alt="" />
-                     <div class="photogallery-section__info">
-                        <h2 class="h3">
-                           Slezský FC Opava obhájil statuty SCM a SpSM
-                        </h2>
-                        <div class="date date--small date--blue">16. 12. 2021</div>
-                     </div>
-                     <div class="photogallery-section__number"><span>22</span></div>
-                  </a>
-               </figure>
-            </div>
-            <div class="col-lg-4 col-sm-6 cl-12">
-               <figure>
-                  <a data-gallery="1" data-gallery-id="1"  href="#">
-                     <img src="https://via.placeholder.com/408x408" loading="lazy" alt="" />
-                     <div class="photogallery-section__info">
-                        <h2 class="h3">
-                           Slezský FC Opava obhájil statuty SCM a SpSM
-                        </h2>
-                        <div class="date date--small date--blue">16. 12. 2021</div>
-                     </div>
-                     <div class="photogallery-section__number"><span>22</span></div>
-                  </a>
-               </figure>
-            </div>
-            <div class="col-lg-4 col-sm-6 cl-12">
-               <figure>
-                  <a data-gallery="1" data-gallery-id="1"  href="#">
-                     <img src="https://via.placeholder.com/408x408" loading="lazy" alt="" />
-                     <div class="photogallery-section__info">
-                        <h2 class="h3">
-                           Slezský FC Opava obhájil statuty SCM a SpSM
-                        </h2>
-                        <div class="date date--small date--blue">16. 12. 2021</div>
-                     </div>
-                     <div class="photogallery-section__number"><span>22</span></div>
-                  </a>
-               </figure>
-            </div>
-            <div class="col-lg-4 col-sm-6 cl-12">
-               <figure>
-                  <a data-gallery="1" data-gallery-id="1"  href="#">
-                     <img src="https://via.placeholder.com/408x408" loading="lazy" alt="" />
-                     <div class="photogallery-section__info">
-                        <h2 class="h3">
-                           Slezský FC Opava obhájil statuty SCM a SpSM
-                        </h2>
-                        <div class="date date--small date--blue">16. 12. 2021</div>
-                     </div>
-                     <div class="photogallery-section__number"><span>22</span></div>
-                  </a>
-               </figure>
-            </div>
-            <div class="col-lg-4 col-sm-6 cl-12">
-               <figure>
-                  <a data-gallery="1" data-gallery-id="1"  href="#">
-                     <img src="https://via.placeholder.com/408x408" loading="lazy" alt="" />
-                     <div class="photogallery-section__info">
-                        <h2 class="h3">
-                           Slezský FC Opava obhájil statuty SCM a SpSM
-                        </h2>
-                        <div class="date date--small date--blue">16. 12. 2021</div>
-                     </div>
-                     <div class="photogallery-section__number"><span>22</span></div>
-                  </a>
-               </figure>
-            </div>
-            <div class="col-lg-4 col-sm-6 cl-12">
-               <figure>
-                  <a data-gallery="1" data-gallery-id="1"  href="#">
-                     <img src="https://via.placeholder.com/408x408" loading="lazy" alt="" />
-                     <div class="photogallery-section__info">
-                        <h2 class="h3">
-                           Slezský FC Opava obhájil statuty SCM a SpSM
-                        </h2>
-                        <div class="date date--small date--blue">16. 12. 2021</div>
-                     </div>
-                     <div class="photogallery-section__number"><span>22</span></div>
-                  </a>
-               </figure>
-            </div>
-            <div class="col-lg-4 col-sm-6 cl-12">
-               <figure>
-                  <a data-gallery="1" data-gallery-id="1"  href="#">
-                     <img src="https://via.placeholder.com/408x408" loading="lazy" alt="" />
-                     <div class="photogallery-section__info">
-                        <h2 class="h3">
-                           Slezský FC Opava obhájil statuty SCM a SpSM
-                        </h2>
-                        <div class="date date--small date--blue">16. 12. 2021</div>
-                     </div>
-                     <div class="photogallery-section__number"><span>22</span></div>
-                  </a>
-               </figure>
-            </div>
-            <div class="col-lg-4 col-sm-6 cl-12">
-               <figure>
-                  <a data-gallery="1" data-gallery-id="1"  href="#">
-                     <img src="https://via.placeholder.com/408x408" loading="lazy" alt="" />
-                     <div class="photogallery-section__info">
-                        <h2 class="h3">
-                           Slezský FC Opava obhájil statuty SCM a SpSM
-                        </h2>
-                        <div class="date date--small date--blue">16. 12. 2021</div>
-                     </div>
-                     <div class="photogallery-section__number"><span>22</span></div>
-                  </a>
-               </figure>
-            </div>
-         </div>
+  <div class="menu-section">
+    <div class="container">
+      <div class="menu-section__inner">
+        <h1 class="h1">fotogalerie</h1>
+        <form action="" class="ms-auto w-auto d-flex menu-section__form">
+          <div class="d-flex mb-4 mb-md-0">
+            <input type="text" placeholder="Zadejte hledaný text" />
+            <button class="btn f-btn">Hledat</button>
+          </div>
+          <label class="o-select menu-section__label">
+            <select class="js-select">
+              <option>2021/22</option>
+              <option value="tipsport">2020/21</option>
+              <option value="tipsport">2019/20</option>
+              <option value="tipsport">2018/19</option>
+              <option value="tipsport">2017/18</option>
+            </select>
+          </label>
+        </form>
       </div>
-   </div>
+    </div>
+  </div>
+  <div class="photogallery-section__inner mb-5 mb-md-10">
+    <div class="container">
+      <div class="row g-5 g-md-10">
+        <div class="col-lg-4 col-sm-6 cl-12">
+          <figure>
+            <a data-gallery="1" data-gallery-id="1" href="#">
+              <img src="images/content/1.jpg" loading="lazy" alt="" />
+              <div class="photogallery-section__info">
+                <h2 class="h3">Slezský FC Opava obhájil statuty SCM a SpSM</h2>
+                <div class="date date--small date--blue">16. 12. 2021</div>
+              </div>
+              <div class="photogallery-section__number"><span>22</span></div>
+            </a>
+          </figure>
+        </div>
+        <div class="col-lg-4 col-sm-6 cl-12">
+          <figure>
+            <a data-gallery="1" data-gallery-id="1" href="#">
+              <img src="images/content/1.jpg" loading="lazy" alt="" />
+              <div class="photogallery-section__info">
+                <h2 class="h3">Slezský FC Opava obhájil statuty SCM a SpSM</h2>
+                <div class="date date--small date--blue">16. 12. 2021</div>
+              </div>
+              <div class="photogallery-section__number"><span>22</span></div>
+            </a>
+          </figure>
+        </div>
+        <div class="col-lg-4 col-sm-6 cl-12">
+          <figure>
+            <a data-gallery="1" data-gallery-id="1" href="#">
+              <img src="images/content/1.jpg" loading="lazy" alt="" />
+              <div class="photogallery-section__info">
+                <h2 class="h3">Slezský FC Opava obhájil statuty SCM a SpSM</h2>
+                <div class="date date--small date--blue">16. 12. 2021</div>
+              </div>
+              <div class="photogallery-section__number"><span>22</span></div>
+            </a>
+          </figure>
+        </div>
+        <div class="col-lg-4 col-sm-6 cl-12">
+          <figure>
+            <a data-gallery="1" data-gallery-id="1" href="#">
+              <img src="images/content/1.jpg" loading="lazy" alt="" />
+              <div class="photogallery-section__info">
+                <h2 class="h3">Slezský FC Opava obhájil statuty SCM a SpSM</h2>
+                <div class="date date--small date--blue">16. 12. 2021</div>
+              </div>
+              <div class="photogallery-section__number"><span>22</span></div>
+            </a>
+          </figure>
+        </div>
+        <div class="col-lg-4 col-sm-6 cl-12">
+          <figure>
+            <a data-gallery="1" data-gallery-id="1" href="#">
+              <img src="images/content/1.jpg" loading="lazy" alt="" />
+              <div class="photogallery-section__info">
+                <h2 class="h3">Slezský FC Opava obhájil statuty SCM a SpSM</h2>
+                <div class="date date--small date--blue">16. 12. 2021</div>
+              </div>
+              <div class="photogallery-section__number"><span>22</span></div>
+            </a>
+          </figure>
+        </div>
+        <div class="col-lg-4 col-sm-6 cl-12">
+          <figure>
+            <a data-gallery="1" data-gallery-id="1" href="#">
+              <img src="images/content/1.jpg" loading="lazy" alt="" />
+              <div class="photogallery-section__info">
+                <h2 class="h3">Slezský FC Opava obhájil statuty SCM a SpSM</h2>
+                <div class="date date--small date--blue">16. 12. 2021</div>
+              </div>
+              <div class="photogallery-section__number"><span>22</span></div>
+            </a>
+          </figure>
+        </div>
+        <div class="col-lg-4 col-sm-6 cl-12">
+          <figure>
+            <a data-gallery="1" data-gallery-id="1" href="#">
+              <img src="images/content/1.jpg" loading="lazy" alt="" />
+              <div class="photogallery-section__info">
+                <h2 class="h3">Slezský FC Opava obhájil statuty SCM a SpSM</h2>
+                <div class="date date--small date--blue">16. 12. 2021</div>
+              </div>
+              <div class="photogallery-section__number"><span>22</span></div>
+            </a>
+          </figure>
+        </div>
+        <div class="col-lg-4 col-sm-6 cl-12">
+          <figure>
+            <a data-gallery="1" data-gallery-id="1" href="#">
+              <img src="images/content/1.jpg" loading="lazy" alt="" />
+              <div class="photogallery-section__info">
+                <h2 class="h3">Slezský FC Opava obhájil statuty SCM a SpSM</h2>
+                <div class="date date--small date--blue">16. 12. 2021</div>
+              </div>
+              <div class="photogallery-section__number"><span>22</span></div>
+            </a>
+          </figure>
+        </div>
+        <div class="col-lg-4 col-sm-6 cl-12">
+          <figure>
+            <a data-gallery="1" data-gallery-id="1" href="#">
+              <img src="images/content/1.jpg" loading="lazy" alt="" />
+              <div class="photogallery-section__info">
+                <h2 class="h3">Slezský FC Opava obhájil statuty SCM a SpSM</h2>
+                <div class="date date--small date--blue">16. 12. 2021</div>
+              </div>
+              <div class="photogallery-section__number"><span>22</span></div>
+            </a>
+          </figure>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
