--- a/src/layouts/05.0_clanek.twig
+++ b/src/layouts/05.0_clanek.twig
@@ -1,14 +1,10 @@
-{% extends "@components/base/base.twig" %}
-
-{% set title = "05.0_Článek" %}
-
-{% block main %}
-   <div class="container">
-      <div class="row">
-         {% include "@components/article-section/article-section.twig" %}
-         {% include "@components/aside/aside.twig" %}
-      </div>
-   </div>
-   {% include "@components/pub-section/pub-section.twig" %}
-   {% include "@components/partners-section/partners-section.twig" %}
-{% endblock %}
+{% extends "@components/base/base.twig" %} {% set title = "05.0_Článek" %} {%
+block main %}
+<div class="container">
+  <div class="row">
+    {% include "@components/article-section/article-section.twig" %} {% include
+    "@components/aside/aside.twig" %}
+  </div>
+</div>
+{% include "@components/pub-section/pub-section.twig" %} {% include
+"@components/partners-section/partners-section.twig" %} {% endblock %}
